CC/ABC/Errs/inheritance
// err on Inheritance

class Person {
 private:
  int ID;
  int age;
  char sex;
};

class Student : public Person {
 public:
  void display() {
    cout << "ID = " << ID;
};

##########################################
inheritance.cpp:22:2: error: expected '}'
}
^
inheritance.cpp:13:31: note: to match this '{'
class Student : public Person {
  ^
  inheritance.cpp:16:24: error: 'ID' is a private member of 'Person'
  cout << "ID = " << ID;
  ^
  inheritance.cpp:8:7: note: declared private here
  int ID;
  ^
  inheritance.cpp:22:2: error: expected ';' after class
  }
  ^
  ;
  3 errors generated.
############################################

class Person {
 public:
  int ID;
  int age;
  char sex;
};

class Student : private Person {
 public:
  void displayStudent() {
    cout << "ID = " << ID;
  }
};

class College : public Student {
 public:
  void displayCollege() {
    cout << "ID = " << ID;
  }
};

############################################
g++ -std=c++11 -o try.o -I.  -c    try.cpp
try.cpp:23:24: error: cannot cast 'College' to its private base class 'Person'
    cout << "ID = " << ID;
                       ^
try.cpp:13:17: note: declared private here
class Student : private Person {
                ^~~~~~~~~~~~~~
try.cpp:23:24: error: 'ID' is a private member of 'Person'
    cout << "ID = " << ID;
                       ^
try.cpp:13:17: note: constrained by private inheritance here
class Student : private Person {
                ^~~~~~~~~~~~~~
try.cpp:8:7: note: member is declared here
  int ID;
      ^
2 errors generated.
make: *** [try.o] Error 1
############################################